--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,16 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
   <div id="root"></div>
+    <svg>
+      <filter id="grainy">
+        <feTurbulence 
+          type="fractalNoise"
+          baseFrequency="0.65"
+          seed="2"
+        />
+      </filter>
+  </svg>
 </body>
 </html>
